# Rompler_2.0

./: .gitignore  CLAUDE.md  CMakeLists.txt  Rompler.jucer
.github/workflows/: build-macos-arm64.yml  build-macos-x86_64.yml  build-windows.yml
CMAKE/: SOURCES.cmake  TESTS.cmake
HELPER_SCRIPTS/: build_au.py  build_standalone.py  build_vst3.py  rebuild_all.py
SOURCE/Components/: ADSRComponent.cpp  ADSRComponent.h  PluginEditor.cpp  PluginEditor.h  RompMenu.h  WaveThumbnail.cpp  WaveThumbnail.h
SOURCE/LookNFeel/: PulsarUIFeel.cpp  PulsarUIFeel.h
SOURCE/Processor/: PluginProcessor.cpp  PluginProcessor.h  RomplerSound.h  RomplerSynth.h
SOURCE/ROMPLE_DATA/: Artist.h  Database.h
SOURCE/Util/: Version.h
Source/: ADSRComponent.cpp  Artist.h  Database.h  DrawableComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetMenu.h  PulsarUIFeel.cpp  PulsarUIFeel.h  RompMenu.cpp  RompMenu.h  WaveThumbnail.cpp  WaveThumbnail.h
TESTS/: test_ParameterValues.cpp  test_Rompler.cpp
